[gd_scene load_steps=3 format=3 uid="uid://cg24571isol8r"]

[ext_resource type="Script" path="res://PotionButton.gd" id="1_cta6c"]
[ext_resource type="FontFile" uid="uid://djn4vxs07l1us" path="res://fonts/sofachrome rg.otf" id="2_pikod"]

[node name="PotionButton" type="Control"]
layout_mode = 3
anchor_left = 0.397
anchor_top = 0.406
anchor_right = 0.397
anchor_bottom = 0.406
offset_left = -429.76
offset_top = -243.848
offset_right = -429.76
offset_bottom = -243.848
script = ExtResource("1_cta6c")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(48, 72)

[node name="CollisionPolygon" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(1.39999, 1.10001)
polygon = PackedVector2Array(-35, -9, -42, 4, -46, 11, -46, 35, -42, 54, -22, 70, -9, 74, 15, 74, 35, 64, 47, 49, 52, 24, 47, 4, 31, -17, 19, -19, 19, -34, 18, -48, 13, -53, 18, -56, 16, -69, 11, -72, -2, -73, -10, -73, -15, -65, -16, -58, -11, -52, -16, -45, -18, -36, -18, -25, -17, -19, -24, -15)

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="Area2D"]
position = Vector2(1.39999, 1.10001)

[node name="Count" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 147.0
offset_right = 101.0
offset_bottom = 188.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_pikod")
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="RequiredLevel" type="Label" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 95.0
offset_right = 71.0
offset_bottom = 118.0
theme_override_colors/font_color = Color(1, 0.180392, 0.0196078, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_pikod")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="left_clicked" from="." to="." method="_on_left_clicked"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
